--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,25 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
-:root{
-    font-family: 'Josefin Sans', sans-serif;
+:root {
+  font-family: "Josefin Sans", sans-serif;
 
-    
+  --title-color: hsl(0, 36%, 70%);
+  --title-span-color: hsl(0, 6%, 24%);
+
+  --input-special-color: hsl(0, 93%, 68%);
+
+  --bg-gradient-color: linear-gradient(
+    135deg,
+    from hsl(0, 0%, 100%),
+    to hsl(0, 100%, 98%)
+  );
+
+  --btn-bg-color: linear-gradient(
+    135deg,
+    from hsl(0, 80%, 86%),
+    to hsl(0, 74%, 74%)
+  );
 }
