--- a/css/styles.css
+++ b/css/styles.css
@@ -23,3 +23,36 @@
     to hsl(0, 74%, 74%)
   );
 }
+.main-container {
+  border: 1px solid magenta;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.logo {
+  width: 30%;
+  margin: 20px auto 20px 30px;
+  max-width: 300px;
+}
+.hero-image {
+  max-width: 100%;
+}
+.main-content {
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 0px;
+  width: 100%;
+}
+.main-content__title {
+  color: var(--title-color);
+  font-size: 56px;
+  font-weight: 300;
+  text-align: center;
+  width: 75%;
+}
+.main-content__title span {
+  color: var(--title-span-color);
+  font-weight: 400;
+}
