--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,9 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: "Josefin Sans", sans-serif;
 }
 :root {
-  font-family: "Josefin Sans", sans-serif;
-
   --title-color: hsl(0, 36%, 70%);
   --title-span-color: hsl(0, 6%, 24%);
 
@@ -47,12 +46,21 @@
 }
 .main-content__title {
   color: var(--title-color);
-  font-size: 56px;
+  font-size: 48px;
   font-weight: 300;
+  letter-spacing: 6px;
   text-align: center;
-  width: 75%;
+  text-transform: uppercase;
+  width: 80%;
 }
 .main-content__title span {
   color: var(--title-span-color);
-  font-weight: 400;
+  font-weight: 700;
+}
+.main-content__description{
+    color: var(--title-color);
+    line-height: 25px;
+    text-align: center;
+    margin: 30px 0px 50px;
+    width: 80%;
 }
