--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,7 @@
     to hsl(0, 100%, 98%)
   );
 
-  --btn-bg-color: linear-gradient(
-    135deg,
-    from hsl(0, 80%, 86%),
-    to hsl(0, 74%, 74%)
-  );
+  --btn-bg-color: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 }
 .main-container {
   border: 1px solid magenta;
@@ -32,23 +28,23 @@
   width: 30%;
   margin: 20px auto 20px 30px;
   max-width: 300px;
-  display: none;
+  /* display: none; */
 }
 .hero-photo {
-  /* max-width: 100%; */
-  display: none;
+  max-width: 100%;
+  /* display: none; */
 }
 .main-content {
   border: 1px solid blue;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0px;
+  padding: 75px 0px;
   width: 100%;
 }
 .main-content__title {
   color: var(--title-color);
-  font-size: 48px;
+  font-size: 42px;
   font-weight: 300;
   letter-spacing: 6px;
   text-align: center;
@@ -80,11 +76,15 @@
   width: 85%;
   padding: 17px 20px;
 }
+#input-email:focus {
+    outline: none;
+    border-color: orangered;
+}
 #input-email::placeholder {
   color: hsl(0, 80%, 86%);
 }
 #input-submit {
-  background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+  background: var(--btn-bg-color);
   border: none;
   border-radius: 25px;
   box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.1);
@@ -96,4 +96,13 @@
   max-width: 100px;
   position: absolute;
   right: 0;
+}
+/* Attribution footer */
+.attribution{
+    padding: 20px;
+    text-align: center;
+    line-height: 25px;
+}
+.attribution a{
+    color: salmon;
 }
