--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,13 @@
   --btn-bg-color: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 }
 .main-container {
-  /* border: 1px solid magenta; */
+  border: 1px solid magenta;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 .logo {
+  border: 1px solid magenta;
   width: 30%;
   margin: 20px auto 20px 30px;
   max-width: 300px;
@@ -35,7 +36,7 @@
   /* display: none; */
 }
 .main-content {
-  /* border: 1px solid blue; */
+  border: 1px solid blue;
   display: flex;
   flex-direction: column;
   align-items: center;
