--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -35,40 +35,38 @@
     right: 5%;
     color: aliceblue;
   }
-  .attribution a{
+  .attribution a {
     color: #fff;
   }
 }
 @media screen and (min-width: 1300px) {
+  .main-content {
+    margin-left: 10%;
+  }
   .main-content__title {
-    font-size: 82px;
+    font-size: 62px;
     letter-spacing: 15px;
     max-width: 500px;
   }
 
   .main-content__description {
-    font-size: 20px;
-    line-height: 35px;
-    margin: 50px auto 75px 0px;
+    line-height: 30px;
+    width: 85%;
+    max-width: 500px;
   }
   .input-label {
     max-width: 480px;
   }
   #input-email {
-    /* display: flex;
-    align-items: center; */
     border-radius: 40px;
     width: 85%;
-    padding: 25px 30px;
-  }
-  #input-email::placeholder {
-    font-size: 18px;
+    padding: 22px 30px;
   }
   #input-submit {
     border-radius: 40px;
     max-width: 110px;
   }
-  .attribution{
+  .attribution {
     font-size: 18px;
   }
 }
