--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,5 +1,7 @@
 @media screen and (min-width: 768px) {
   .main-container {
+    background-image: url(../images/bg-pattern-desktop.svg);
+    background-size: cover;
     display: grid;
     grid-template-columns: 55% 45%;
     grid-template-rows: 20% 60% 20%;
@@ -41,6 +43,9 @@
   }
 }
 @media screen and (min-width: 1200px) {
+  .main-container{
+    background-size: contain;
+  }
   .main-content {
     width: 80%;
   }
@@ -64,7 +69,7 @@
     width: 85%;
     padding: 22px 30px;
   }
-  #input-submit {
+  .btn-submit {
     border-radius: 40px;
     max-width: 110px;
   }
