--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@
 
   --bg-gradient-color: linear-gradient(
     135deg,
-    from hsl(0, 0%, 100%),
-    to hsl(0, 100%, 98%)
+    hsl(0, 0%, 100%),
+    hsl(0, 100%, 98%)
   );
 
   --btn-bg-color: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
@@ -68,7 +68,7 @@
   margin: 30px 0px 50px;
   width: 80%;
 }
-.input-label {
+.email-form {
   /* border: 1px solid red; */
   display: flex;
   align-items: center;
@@ -76,39 +76,67 @@
   width: 80%;
   max-width: 400px;
 }
+.input-label {
+  /* border: 1px solid blue; */
+  width: 100%;
+}
 #input-email {
-  border: 1px solid hsl(0, 80%, 86%);
+  border: 1px solid #ddd;
   border-radius: 25px;
   width: 85%;
   padding: 17px 20px;
+  transition: all 0.5s;
 }
 #input-email:focus {
-    outline: none;
-    border-color: orangered;
+  outline: none;
+  border-color: var(--input-special-color);
 }
 #input-email::placeholder {
+  color: #ddd;
+}
+#input-email:focus::placeholder {
   color: hsl(0, 80%, 86%);
 }
-#input-submit {
+.input-email__warning{
+  color: var(--input-special-color);
+  font-size: 14px;
+  margin-left: 20px;
+  margin-top: 10px;
+  position: absolute;
+  transition: all .5s;
+  opacity: 0;
+}
+.input-email__warning--visible{
+opacity: 1;
+}
+.btn-submit {
   background: var(--btn-bg-color);
   border: none;
   border-radius: 25px;
   box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.1);
-  color: #fff;
-  font-size: 30px;
-  font-weight: 300;
+  cursor: pointer;
   height: 100%;
+  outline: none;
   width: 25%;
   max-width: 100px;
   position: absolute;
   right: 0;
+  transition: all 0.5s;
+}
+.btn-submit:hover {
+  background: #fad6d6;
+  /* opacity: 0.5; */
 }
 /* Attribution footer */
-.attribution{
-    padding: 20px;
-    text-align: center;
-    line-height: 25px;
+.attribution {
+  padding: 20px;
+  text-align: center;
+  line-height: 25px;
 }
-.attribution a{
-    color: salmon;
+.attribution a {
+  color: salmon;
+  transition: color 0.5s;
+}
+.attribution a:hover {
+  color: brown;
 }
